--- a/languages/lisp/theory.org
+++ b/languages/lisp/theory.org
@@ -1,3 +1,6 @@
+- https://www.youtube.com/c/FluxHarmonicLive/videos music
+- http://sarabander.github.io/sicp/html/UTF.xhtml#UTF
+  https://github.com/sarabander/sicp/
 * SICP
 - MIT 6.001 Structure and Interpretation, 1986 - https://www.youtube.com/playlist?list=PLE18841CABEA24090
   Gerald Jay Sussman
