--- a/languages/go.org
+++ b/languages/go.org
@@ -1,3 +1,7 @@
+- https://github.com/miku/dwstalk
+  ckit + sqlite
+- https://www.allhandsontech.com/programming/golang/web-app-sqlite-go/
+  gin + sqlite
 - For minimal size file:
   > go build -ldflags="-s -w"
   - -w turns off DWARF debugging information (no gdb/pprof)
