--- a/languages/javascript/javascript.org
+++ b/languages/javascript/javascript.org
@@ -1,3 +1,4 @@
+- deno runtime https://github.com/denoland/deno
 - CPS http://matt.might.net/articles/by-example-continuation-passing-style/
 https://twitter.com/goncy/status/1396093019246546947?s=20
 https://github.com/30-seconds/30-seconds-of-interviews
