--- a/languages/rust.org
+++ b/languages/rust.org
@@ -1,3 +1,4 @@
+- vulkan https://github.com/sjb3d/caldera
 - libpthread.so needes for print!() https://github.com/rust-lang/rust/issues/43633
 - https://www.forrestthewoods.com/blog/learning-rust-via-advent-of-code/
 - https://www.forrestthewoods.com/blog/solving-advent-of-code-in-under-a-second/
